@@ -1,0 +1,2 @@
+prog: reach_thread_register
+vgopts: -q --leak-check=full --show-leak-kinds=definite
